<resources>
    <string name="app_name">RSS news</string>
    <string name="favourites">избранное</string>
    <string name="news">новости</string>
    <string name="BreakingNews">Важные новости</string>
    <string name="HardNews">Новости - хард</string>
    <string name="gadgetsNews">Новости - гаджеты</string>
    <string name="softNews">Новости - софт</string>
    <string name="gameNews">Новости - игры</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rss_news">Хотите закрыть приложение RSS news?</string>
    <string name="exit">Exit</string>
    <string name="return_menu">Return</string>
</resources>



